[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["Vladimir Titov <tvv-vg@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-api-python-client = "^2.111.0"
python-dotenv = "^1.0.0"
isodate = "^0.6.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
